Fix imports and switch List.removeFirst method for multiversion compatibility